--- a/src/app/dashboard/header/header.html
+++ b/src/app/dashboard/header/header.html
@@ -2,8 +2,8 @@
   <div class="logo">BankApp</div>
   
   <div class="user-info">
-    <p class="user-id">ID: 12345</p>
-    <h2 class="user-name">Jan Kowalski</h2>
+    <p class="user-id">{{ user?.id }}</p>
+    <h2 class="user-name">{{ user?.firstName }} {{ user?.lastName }}</h2>
   </div>
   
   <button class="logout-button" (click)="logout()"> Wyloguj się</button>
