Prepare layout for account and transfer (implementation soon)

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -1,1 +1,11 @@
-<app-header />
+<app-header></app-header>
+
+<div class="dashboard-main">
+  <div class="dashboard-left">
+    <app-transfer></app-transfer>
+  </div>
+
+  <div class="dashboard-right">
+    <app-account></app-account>
+  </div>
+</div>
