--- a/src/app/dashboard/header/header.html
+++ b/src/app/dashboard/header/header.html
@@ -2,7 +2,7 @@
   <div class="logo">BankApp</div>
   
   <div class="user-info">
-    <p class="user-id">{{ user?.id }}</p>
+    <p class="user-id">ID: {{ user?.id }}</p>
     <h2 class="user-name">{{ user?.firstName }} {{ user?.lastName }}</h2>
   </div>
   
