--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -23,4 +23,8 @@
 
   <button type="submit">Zaloguj</button>
 
+  <div class="register-link-container">
+  <button type="button" class="register-btn" (click)="goToRegister()">Zarejestruj się</button>
+  </div>
+
 </form>
