--- a/src/app/dashboard/header/header.html
+++ b/src/app/dashboard/header/header.html
@@ -1,4 +1,5 @@
 <header class="header-container">
+  <img src="grafika.png" alt="BankApp Logo" class="logo-image" />
   <div class="logo">BankApp</div>
   
   <div class="user-info">
